.metadata/.plugins/org.eclipse.cdt.ui/Ado.build.log
14:14:47 **** Build of configuration Debug for project Ado ****
make all 
Building file: ../ado.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"ado.d" -MT"ado.d" -o "ado.o" "../ado.c"
../ado.c: In function ‘main’:
../ado.c:27:3: error: ‘for’ loop initial declarations are only allowed in C99 mode
   for (int i=0; i<39;++i)
   ^
../ado.c:27:3: note: use option -std=c99 or -std=gnu99 to compile your code
../ado.c: In function ‘search’:
../ado.c:46:3: error: ‘for’ loop initial declarations are only allowed in C99 mode
   for (int t=0;t<39;t++){
   ^
../ado.c: In function ‘load’:
../ado.c:115:1: error: ‘for’ loop initial declarations are only allowed in C99 mode
 for (int i = 0; i <39; ++i){
 ^
../ado.c:116:3: error: ‘for’ loop initial declarations are only allowed in C99 mode
   for (int j = 0; j< 39; ++j)
   ^
make: *** [ado.o] Error 1

14:14:47 Build Finished (took 331ms)

